openshift/reference/dex/dex-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "dex",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "dex"
    }
  },
  "spec": {
    "selector": {
      "app": "dex"
    },
    "ports": [
      {
        "name": "http",
        "port": 5556,
        "targetPort": 5556
      }
    ]
  }
}
